@@ -1,7 +1,8 @@
 Revision history for Dist-Zilla-Plugin-VerifyPhases
 
 {{$NEXT}}
-          - now also checking for prereqs provided with other metadata
+          - now also checking for prereqs provided with other metadata,
+            and distribution metadata modified after being provided
 
 0.011     2015-05-08 02:52:01Z
           - also test for premature population of release_status (a new
